--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@mantine/core": "^7.6.2",
     "@mantine/hooks": "^7.6.2",
+    "@tabler/icons-react": "^3.0.1",
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18"
@@ -34,6 +35,7 @@
     "postcss-simple-vars": "^7.0.1",
     "prettier": "^3.2.5",
     "sass": "^1.71.1",
-    "typescript": "^5"
+    "typescript": "^5",
+    "typescript-plugin-css-modules": "^5.1.0"
   }
 }
