--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,13 @@
     "plugins": [
       {
         "name": "next"
+      },
+      {
+        "name": "typescript-plugin-css-modules",
+        "options": {
+          "goToDefinition": true,
+          "allowUnknownClassnames": true
+        }
       }
     ],
     "paths": {
@@ -28,6 +35,7 @@
     }
   },
   "include": [
+    "declarations.d.ts",
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
